feat: Deploy user activation
