# src/controllers/auth.controller.ts
@@ -22,7 +22,28 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Password must contain at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "at-least-one-number",
+      "Password must contain at least one number",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    ),
+
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Passwords not match"),
@@ -30,6 +51,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["Auth"]
+      #swagger.requestBody = {
+          required: true,
+          schema: {$ref: "#/components/schemas/RegisterRequest"}
+      }
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
     try {
@@ -46,7 +74,6 @@ export default {
         username,
         email,
         password,
-        confirmPassword,
       });
 
       res.status(200).json({
@@ -61,8 +88,10 @@ export default {
       });
     }
   },
+
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ["Auth"]
      #swagger.requestBody = {
         required: true,
         schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -79,6 +108,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -118,6 +148,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+    #swagger.tags = ["Auth"]
     #swagger.security = [{ bearerAuth: [] }]
     */
     try {
@@ -127,6 +158,42 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /** 
+      #swagger.tags = ["Auth"]
+      #swagger.requestBody = {
+        required: true,
+        schema: {$ref: "#/components/schemas/ActivationRequest"}
+      }
+        */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+
+      res.status(200).json({
+        message: "Success activation",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
