# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendMail } from "../utils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 
 export interface User {
   fullName: string;
@@ -10,14 +12,15 @@ export interface User {
   profilePicture: string;
   isActive: boolean;
   activationCode: string;
+  createdAt?: string;
 }
 const Schema = mongoose.Schema;
 
 const userSchema = new Schema<User>(
   {
     fullName: { type: Schema.Types.String, required: true },
-    username: { type: Schema.Types.String, required: true },
-    email: { type: Schema.Types.String, required: true },
+    username: { type: Schema.Types.String, required: true, unique: true },
+    email: { type: Schema.Types.String, required: true, unique: true },
     password: { type: Schema.Types.String, required: true },
     role: {
       type: Schema.Types.String,
@@ -36,7 +39,34 @@ const userSchema = new Schema<User>(
 userSchema.pre("save", function (next) {
   const user = this;
   user.password = encrypt(user.password);
+  user.activationCode = encrypt(user.id);
   next();
+});
+
+userSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+
+    console.log("Send Email to:", user.email);
+
+    const contentMail = await renderMailHtml("registration-success.ejs", {
+      username: user.username,
+      fullName: user.fullName,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+    await sendMail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Activasi Akun Anda",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.log("Error sending email:", error);
+  } finally {
+    next();
+  }
 });
 
 userSchema.methods.toJSON = function () {
